--- a/src/Projects/Projects.css
+++ b/src/Projects/Projects.css
@@ -11,7 +11,5 @@
 
 @media screen and (max-width: 800px) {
     .projects-container{
-        padding-left: 3vw;
-        padding-right: 3vw;
     }
    }
